@@ -84,7 +84,7 @@ public class ApartmentService {
 
           String nextPageUrl = null;
           if (results.size() == actualLimit) {
-            results.remove(results.size() - 1);
+            results.removeLast();
             results.trimToSize();
 
             final var last = results.getLast().getApt();
